# Impro-App

./: .gitignore  CMakeLists.txt  Common.hpp  README.md  main.cpp  noise.cpp  remove_noise.cpp
Filters/: canny.cpp  canny.hpp  convolution.cpp  convolution.hpp  gaussian.cpp  gaussian.hpp  prewitt.cpp  prewitt.hpp  robert.cpp  robert.hpp  sobel.cpp  sobel.hpp
Frequency/: frequency.cpp  frequency.hpp
Noise/: Threshold.cpp  Threshold.hpp  noise.cpp  noise.hpp  remove_noise.cpp  remove_noise.hpp
QT_GUI_TASK_1/: Common.hpp  Icons.qrc  QT_GUI_TASK_1.pro  Threshold.hpp  cannyparameters.cpp  gaussiannoiseparameters.cpp  gaussiannoiseparameters.h  gaussiannoiseparameters.ui  imageClass.cpp  imageClass.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  saltpepperparameters.cpp  saltpepperparameters.h  saltpepperparameters.ui  thresholdwindow.cpp  thresholdwindow.h  uniformnoiseparameters.cpp  uniformnoiseparameters.h  uniformnoiseparameters.ui
QT_GUI_TASK_1/ActiveContour/: activecontour.cpp  activecontour.h
QT_GUI_TASK_1/Filters/: add_noise.cpp  add_noise.hpp  canny.hpp  convolution.cpp  convolution.hpp  edge_detection.cpp  edge_detection.hpp  gaussian.cpp  gaussian.hpp  helper_functions.cpp  helper_functions.hpp  prewitt.cpp  prewitt.hpp  remove_noise.cpp  remove_noise.hpp  robert.cpp  robert.hpp  sobel.cpp  sobel.hpp
QT_GUI_TASK_1/Forms/: cannyparameters.ui  saltpepperparameters.ui  thresholdwindow.ui
QT_GUI_TASK_1/Frequency/: frequency.cpp  frequency.hpp
QT_GUI_TASK_1/Histogram/: Histogram.cpp  Histogram.hpp
QT_GUI_TASK_1/Noise/: noise.cpp  noise.hpp  (+2 more)
(+7 files in other folders)
